# InsuranceCompany

./: .gitignore  docker-compose.yml
backend/: .dockerignore  .env  API_DOCUMENTATION.md  Dockerfile  README.md  config.py  database.py  entrypoint.sh  main.py  pyproject.toml
backend/counterparties/services/: deps.py
backend/counterparties/services/agent/: repo.py  schemas.py  service.py
backend/counterparties/services/client/: repo.py  schemas.py  service.py
backend/counterparties/services/personal_data/: repo.py  schemas.py  service.py
backend/insurance_contracts/services/: deps.py
backend/insurance_contracts/services/insurance_contracts/: repo.py  schemas.py  service.py
backend/insurance_contracts/services/insurance_events/: repo.py  schemas.py  service.py
backend/insurance_contracts/services/insurance_payments/: repo.py  schemas.py  service.py
backend/insurance_contracts/services/paid_plans/: repo.py  schemas.py  service.py
backend/routers/: agent.py  client.py  insurance_contracts.py  insurance_events.py  insurance_payments.py  paid_plans.py  personal_data.py
backend/sql_scripts/SETUP/: v1.sql
backend/utils/: base_repo.py  base_service.py
frontend/: .dockerignore  Dockerfile  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/app/components/: AppButton.vue  AppInput.vue  AppModal.vue  AppTable.vue
frontend/app/composables/: useApi.ts
frontend/app/layouts/: default.vue
frontend/app/pages/: index.vue
frontend/app/stores/: agents.ts  clients.ts  contracts.ts  events.ts  payments.ts  (+2 more)
frontend/types/: api.ts
(+6 files in other folders)
